dev/test_programs/INVALID/group1/exp15.go
package main

func main(){
	var array [2]int;
	-array[0] = 1;
}
